RESOLVED FIXED 244173
[LFC][IFC] text-overflow: ellipsis should not affect geometries
https://bugs.webkit.org/show_bug.cgi?id=244173
Summary [LFC][IFC] text-overflow: ellipsis should not affect geometries
alan baradlay
Reported 2022-08-21 15:35:41 PDT
it's visual only operation.
Attachments
Patch (26.60 KB, patch)
2022-08-21 15:47 PDT, alan baradlay
no flags
alan baradlay
Comment 1 2022-08-21 15:47:26 PDT
Antti Koivisto
Comment 2 2022-08-22 09:01:08 PDT
Comment on attachment 461780 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=461780&action=review > Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:872 > + if (!hasDamage(box)) > + continue; Maybe the hasDamage(box) test could go before all the type tests too and be done in one place only. Not sure about the inline-block case...
alan baradlay
Comment 3 2022-08-22 10:01:45 PDT
(In reply to Antti Koivisto from comment #2) > Comment on attachment 461780 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=461780&action=review > > > Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:872 > > + if (!hasDamage(box)) > > + continue; > > Maybe the hasDamage(box) test could go before all the type tests too and be > done in one place only. Not sure about the inline-block case... good point. will do in a followup patch.
EWS
Comment 4 2022-08-22 10:42:09 PDT
Committed 253650@main (dfaf8254ed07): <https://commits.webkit.org/253650@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461780 [details].
Radar WebKit Bug Importer
Comment 5 2022-08-22 10:43:16 PDT
Note You need to log in before you can comment on or make changes to this bug.