[LFC][IFC] text-overflow: ellipsis should not affect geometries https://bugs.webkit.org/show_bug.cgi?id=244173

Reviewed by Antti Koivisto.

text-overflow: ellipsis: (https://drafts.csswg.org/css-overflow/#text-overflow)
- This property specifies .. its end line box edge in the inline progression direction ...
- Ellipsing only affects rendering and must not affect layout ..

1. Move content truncation from display box builder to line builder. Line builder uses logical direction while display box builder operates on visual geometry. Using logical direction has the benefit of keeping truncation direction independent. Line content truncation happens as the last step when "closing" the current line right after completing all the geometry affecting operations (trailing content trimming etc).

2. Do not adjust display boxes with the truncated content. Truncation should only affect rendering. Instead introduce a visibility flag which drives rendering when ellipsis (and truncation) is present.

* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::truncate):
(WebCore::Layout::Line::Run::detachTrailingWhitespace):
(WebCore::Layout::Line::Run::truncate):
* Source/WebCore/layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::Run::isTruncated const):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::close):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayBox.h:
(WebCore::InlineDisplay::Box::Text::visuallyVisibleLength const):
(WebCore::InlineDisplay::Box::Box):
(WebCore::InlineDisplay::Box::isVisuallyHidden const):
(WebCore::InlineDisplay::Box::adjustInkOverflow):
(WebCore::InlineDisplay::Box::Text::Text):
(WebCore::InlineDisplay::Box::Text::truncatedLength const): Deleted.
(WebCore::InlineDisplay::Box::truncate): Deleted.
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::build):
(WebCore::Layout::InlineDisplayContentBuilder::appendTextDisplayBox):
(WebCore::Layout::InlineDisplayContentBuilder::appendAtomicInlineLevelDisplayBox):
(WebCore::Layout::InlineDisplayContentBuilder::appendInlineBoxDisplayBox):
(WebCore::Layout::InlineDisplayContentBuilder::appendSpanningInlineBoxDisplayBox):
(WebCore::Layout::InlineDisplayContentBuilder::processOverflownRunsForEllipsis):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.h:
* Source/WebCore/layout/integration/inline/InlineIteratorBoxModernPath.h:
(WebCore::InlineIterator::BoxModernPath::selectableRange const):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::paint):

Canonical link: https://commits.webkit.org/253650@main