Source/WebCore/layout/formattingContexts/inline/InlineLine.h
@@ -68,6 +68,7 @@ public:
     void removeHangingGlyphs();
     void resetBidiLevelForTrailingWhitespace(UBiDiLevel rootBidiLevel);
     void applyRunExpansion(InlineLayoutUnit horizontalAvailableSpace);
+    void truncate(InlineLayoutUnit logicalRight);
 
     struct Run {
         enum class Type : uint8_t {
@@ -99,10 +100,17 @@ public:
         bool isContentful() const { return (isText() && textContent()->length) || isBox() || isLineBreak() || isListMarker(); }
         bool isGenerated() const { return isListMarker(); }
 
+        bool isTruncated() const { return m_isTruncated; }
+
         const Box& layoutBox() const { return *m_layoutBox; }
         struct Text {
             size_t start { 0 };
             size_t length { 0 };
+            struct PartiallyVisibleContent {
+                size_t length { 0 };
+                InlineLayoutUnit width { 0.f };
+            };
+            std::optional<PartiallyVisibleContent> partiallyVisibleContent { };
             bool needsHyphen { false };
         };
         const std::optional<Text>& textContent() const { return m_textContent; }
@@ -160,6 +168,7 @@ public:
         bool hasTrailingLetterSpacing() const;
         InlineLayoutUnit trailingLetterSpacing() const;
         InlineLayoutUnit removeTrailingLetterSpacing();
+        void truncate(InlineLayoutUnit truncatedWidth);
 
         Type m_type { Type::Text };
         const Box* m_layoutBox { nullptr };
@@ -171,6 +180,7 @@ public:
         std::optional<TrailingWhitespace> m_trailingWhitespace { };
         std::optional<size_t> m_lastNonWhitespaceContentStart { };
         std::optional<Text> m_textContent;
+        bool m_isTruncated { false };
     };
     using RunList = Vector<Run, 10>;
     const RunList& runs() const { return m_runs; }
