Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp
@@ -104,7 +104,7 @@ DisplayBoxes InlineDisplayContentBuilder::build(const LineBuilder::LineContent& 
         processBidiContent(lineContent, lineBox, displayLine, boxes);
     else
         processNonBidiContent(lineContent, lineBox, displayLine, boxes);
-    processOverflownRunsForEllipsis(boxes, displayLine.right());
+    processOverflownRunsForEllipsis(lineContent, boxes, displayLine.right());
     collectInkOverflowForTextDecorations(boxes, displayLine);
     collectInkOverflowForInlineBoxes(boxes);
     return boxes;
@@ -187,6 +187,7 @@ void InlineDisplayContentBuilder::appendTextDisplayBox(const Line::Run& lineRun,
     auto adjustedContentToRender = [&] {
         return text->needsHyphen ? makeString(StringView(content).substring(text->start, text->length), style.hyphenString()) : String();
     };
+    auto isVisuallyHidden = !lineRun.isTruncated() ? InlineDisplay::Box::IsVisuallyHidden::No : !text->partiallyVisibleContent.has_value() ? InlineDisplay::Box::IsVisuallyHidden::Yes : InlineDisplay::Box::IsVisuallyHidden::Partially;
     boxes.append({ m_lineIndex
         , lineRun.isWordSeparator() ? InlineDisplay::Box::Type::WordSeparator : InlineDisplay::Box::Type::Text
         , layoutBox
@@ -194,8 +195,9 @@ void InlineDisplayContentBuilder::appendTextDisplayBox(const Line::Run& lineRun,
         , textRunRect
         , inkOverflow()
         , lineRun.expansion()
-        , InlineDisplay::Box::Text { text->start, text->length, content, adjustedContentToRender(), text->needsHyphen }
+        , InlineDisplay::Box::Text { text->start, text->length, content, adjustedContentToRender(), text->needsHyphen, isVisuallyHidden == InlineDisplay::Box::IsVisuallyHidden::Partially ? std::make_optional(text->partiallyVisibleContent->length) : std::nullopt }
         , true
+        , isVisuallyHidden
         , { }
     });
 }
@@ -257,6 +259,8 @@ void InlineDisplayContentBuilder::appendAtomicInlineLevelDisplayBox(const Line::
         , inkOverflow()
         , lineRun.expansion()
         , { }
+        , true
+        , lineRun.isTruncated() ? InlineDisplay::Box::IsVisuallyHidden::Yes : InlineDisplay::Box::IsVisuallyHidden::No
     });
     // Note that inline boxes are relative to the line and their top position can be negative.
     // Atomic inline boxes are all set. Their margin/border/content box geometries are already computed. We just have to position them here.
@@ -308,6 +312,7 @@ void InlineDisplayContentBuilder::appendInlineBoxDisplayBox(const Line::Run& lin
         , { }
         , { }
         , inlineBox.hasContent()
+        , lineRun.isTruncated() ? InlineDisplay::Box::IsVisuallyHidden::Yes : InlineDisplay::Box::IsVisuallyHidden::No
         , isFirstLastBox(inlineBox)
     });
     // This inline box showed up first on this line.
@@ -335,6 +340,7 @@ void InlineDisplayContentBuilder::appendSpanningInlineBoxDisplayBox(const Line::
         , { }
         , { }
         , inlineBox.hasContent()
+        , lineRun.isTruncated() ? InlineDisplay::Box::IsVisuallyHidden::Yes : InlineDisplay::Box::IsVisuallyHidden::No
         , isFirstLastBox(inlineBox)
     });
     // Middle or end of the inline box. Let's stretch the box as needed.
@@ -750,7 +756,7 @@ void InlineDisplayContentBuilder::processBidiContent(const LineBuilder::LineCont
     handleTrailingOpenInlineBoxes();
 }
 
-void InlineDisplayContentBuilder::processOverflownRunsForEllipsis(DisplayBoxes& boxes, InlineLayoutUnit lineBoxRight)
+void InlineDisplayContentBuilder::processOverflownRunsForEllipsis(const LineBuilder::LineContent& lineContent, DisplayBoxes& boxes, InlineLayoutUnit lineBoxRight)
 {
     if (root().style().textOverflow() != TextOverflow::Ellipsis)
         return;
@@ -759,51 +765,43 @@ void InlineDisplayContentBuilder::processOverflownRunsForEllipsis(DisplayBoxes& 
 
     if (rootInlineBox.right() <= lineBoxRight) {
         ASSERT(boxes.last().right() <= lineBoxRight);
+        ASSERT(lineContent.runs.isEmpty() || !lineContent.runs[lineContent.runs.size() - 1].isTruncated());
         return;
     }
 
     static MainThreadNeverDestroyed<const AtomString> ellipsisStr(&horizontalEllipsis, 1);
     auto ellipsisRun = WebCore::TextRun { ellipsisStr->string() };
     auto ellipsisWidth = !m_lineIndex ? root().firstLineStyle().fontCascade().width(ellipsisRun) : root().style().fontCascade().width(ellipsisRun);
-    auto firstTruncatedBoxIndex = boxes.size();
 
-    for (auto index = boxes.size(); index--;) {
-        auto& displayBox = boxes[index];
-
-        if (displayBox.left() >= lineBoxRight) {
-            // Fully overflown boxes are collapsed.
-            displayBox.truncate();
-            continue;
+    auto ellipsisVisualLeft = [&] {
+        auto truncatedWidth = [&] () -> float {
+            for (auto& lineRun : lineContent.runs) {
+                if (lineRun.isTruncated())
+                    return lineRun.isText() ? lineRun.textContent()->partiallyVisibleContent->width : 0.f;
+            }
+            return { };
+        };
+        auto left = 0.f;
+        for (auto& box : boxes) {
+            if (box.isInlineBox())
+                continue;
+            switch (box.isVisuallyHidden()) {
+            case InlineDisplay::Box::IsVisuallyHidden::No:
+                left = std::max(left, box.right());
+                break;
+            case InlineDisplay::Box::IsVisuallyHidden::Partially:
+                return std::max(left, box.left() + truncatedWidth());
+            case InlineDisplay::Box::IsVisuallyHidden::Yes:
+                return left;
+            default:
+                ASSERT_NOT_REACHED();
+                break;
+            }
         }
+        return left;
+    }();
+    auto ellispisBoxRect = InlineRect { rootInlineBox.top(), ellipsisVisualLeft, ellipsisWidth, rootInlineBox.height() };
 
-        // We keep truncating content until after we can accommodate the ellipsis content
-        // 1. fully truncate in case of inline level boxes (ie non-text content) or if ellipsis content is wider than the overflowing one.
-        // 2. partially truncated to make room for the ellipsis box.
-        auto availableRoomForEllipsis = lineBoxRight - displayBox.left();
-        if (availableRoomForEllipsis <= ellipsisWidth) {
-            // Can't accommodate the ellipsis content here. We need to truncate non-overflowing boxes too.
-            displayBox.truncate();
-            continue;
-        }
-
-        if (displayBox.isText()) {
-            auto text = *displayBox.text();
-            // FIXME: Check if it needs adjustment for RTL direction.
-            auto truncatedContent = TextUtil::breakWord(downcast<InlineTextBox>(displayBox.layoutBox()), text.start(), text.length(), displayBox.width(), availableRoomForEllipsis - ellipsisWidth, { }, displayBox.style().fontCascade());
-            displayBox.truncate(truncatedContent.logicalWidth, truncatedContent.length);
-        } else
-            displayBox.truncate();
-
-        firstTruncatedBoxIndex = index;
-        break;
-    }
-    ASSERT(firstTruncatedBoxIndex < boxes.size());
-    // Collapse truncated runs.
-    auto contentRight = boxes[firstTruncatedBoxIndex].right();
-    for (auto index = firstTruncatedBoxIndex + 1; index < boxes.size(); ++index)
-        boxes[index].moveHorizontally(contentRight - boxes[index].left());
-    // And append the ellipsis box as the trailing item.
-    auto ellispisBoxRect = InlineRect { rootInlineBox.top(), contentRight, ellipsisWidth, rootInlineBox.height() };
     boxes.append({ m_lineIndex
         , InlineDisplay::Box::Type::Ellipsis
         , root()
